switches asddc and beerpong, fixes spacing of preview images display

--- a/styles/style.css
+++ b/styles/style.css
@@ -734,12 +734,12 @@ div.panel.show{
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
+  /* justify-content: space-around; */
 }
 
 .asddcPreview{
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
   display: flex;
   align-items: center;
   justify-content: space-around;
